fixed max width and wrapping of production page

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -14,6 +14,11 @@ table td{
   border-top: none !important;
 }
 
+.production-width {
+  max-width: 1920px;
+  white-space: nowrap;
+}
+
 .container-fluid {
   width: 100%;
 }
